--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,4 +21,5 @@ jobs:
     steps:
       - name: install dependencies
         run: |
+          go env -w GO111MODULE=auto
           go install .
