--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,6 @@ jobs:
         with:
           go-version: ">=1.19.0"
           cache: true
-          cache-dependency-path: go.sum
       - name: Display Go version
         run: go version
 
@@ -20,6 +19,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: install dependencies
-        run: |
-          go env -w GO111MODULE=auto
-          go install .
+        run: go install .
