--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,5 +21,5 @@ jobs:
       - name: install dependencies
         run: pwd
       - name: itest
-        run: ls -al
+        run: find go.sum
         # run: go install .
