(feat) 주소값을 확인하는 로직 추가

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,3 +14,9 @@ jobs:
           cache: true
       - name: Display Go version
         run: go version
+
+  go-install-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Install dependencies
+        run: go mod download
