--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,5 +18,12 @@ jobs:
   go-install-dependencies:
     runs-on: ubuntu-latest
     steps:
-      - name: Install dependencies
+      - name: Set up Go environment
+        run: |
+          export PATH=$PATH:/usr/local/go/bin
+          export GOPATH=$HOME/go
+          export PATH=$PATH:$GOPATH/bin
+          export GOROOT=/usr/lib/go-1.13
+          export PATH=$PATH:$GOROOT/bin
+      - name: Download dependencies
         run: go mod download
